# pbp

./: .flake8_temp  .gitignore  README.md  example.py  flake8_pbp.py  flake_8_ast_error.py  generate_test.py  setup.cfg  setup.py
checks/: PBP101_range_len.py  PBP102_json_dot_loads.py  PBP103_open_no_with.py  PBP104_requests_json_dumps.py  PBP105_assigns_to_list.py  PBP106_camel_case_func.py  PBP107_default_mutable_args.py  PBP108_compares_types.py  PBP109_compares_to_true.py  PBP110_inherits_from_object.py  PBP111_not_using_ternary.py  PBP112_using_filter.py  PBP113_shadow_builtins.py  PBP114_no_pointless_ternary.py  PBP115_better_any.py  __init__.py
src/: flake8_ast_error.py  flake8_pbp.py
src/checks/: PBP101_range_len.py  PBP102_json_dot_loads.py  PBP103_open_no_with.py  PBP104_requests_json_dumps.py  PBP105_assigns_to_list.py  PBP106_camel_case_func.py  PBP107_default_mutable_args.py  PBP108_compares_types.py  PBP109_compares_to_true.py  PBP110_inherits_from_object.py  PBP111_not_using_ternary.py  PBP112_using_filter.py  PBP113_shadow_builtins.py  PBP114_no_pointless_ternary.py  PBP115_better_any.py  PBP115_better_any_and_all.py  PBP116_non_pascal_case_class.py  PBP117_use_list_comp.py  __init__.py
src/tests/: main_test.py
