[metadata]
name = flake8_pgp
version = 1.0.0
description = flake8 plugin which checks for various bad python practises
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UP929312/pbp
author = Ben Skerritt
author_email = benskerrit@hotmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_pbp
install_requires =
    flake8>=5
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    YTT=flake8_pbp:ProduceBetterPythonPlugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false