[metadata]
name = flake8_pgp
version = 1.0.0
description = flake8 plugin which checks for various bad python practises
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UP929312/pbp
author = Ben Skerritt
author_email = ben.skerrit@vodafone.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_pbp
install_requires =
    flake8 >=5
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    PBP1 = flake8_pbp:ProduceBetterPythonPlugin
paths =
    src/

[bdist_wheel]
universal = True
